--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Loading Animation</title>
   </head>
   <body>
+    <section class="wrapper">
+      <div class="loader">
+        <div class="loanding one"></div>
+        <div class="loanding two"></div>
+        <div class="loanding three"></div>
+        <div class="loanding four"></div>
+      </div>
+    </section>
     <h1>Loading Animation...</h1>
   </body>
 </html>
