--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
   <body>
     <section class="wrapper">
       <div class="loader">
-        <div class="loanding one"></div>
-        <div class="loanding two"></div>
-        <div class="loanding three"></div>
-        <div class="loanding four"></div>
+        <div class="loading one"></div>
+        <div class="loading two"></div>
+        <div class="loading three"></div>
+        <div class="loading four"></div>
       </div>
     </section>
-    <h1>Loading Animation...</h1>
   </body>
 </html>
